sv -fixed coparison view alignment

--- a/styles/utils.module.css
+++ b/styles/utils.module.css
@@ -334,7 +334,6 @@
 	height: 270px;
 	width: 300px;
 	display: inline-flex;
-    align-items: center;
     padding: 5px 15px;
     flex-direction: column;
 }
